--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
-__pycache__
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
+# Virtual environment
+venv/
+.env/
+
+# VS Code
+.vscode/
+
+# Pytest cache
+.pytest_cache/
+
+# mypy
+.mypy_cache/
+
+# Home Assistant-specific
+home-assistant.log
+home-assistant.log.*
