--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,10 @@
   "name": "Open-Meteo PV Forecast",
   "version": "1.0.0",
   "config_flow": true,
-  "config_entries": true,
   "documentation": "https://github.com/tz8/openmeteo_pv_forecast",
   "requirements": [],
   "dependencies": [],
   "codeowners": ["@tz8"],
-  "iot_class": "local_polling"
+  "iot_class": "local_polling",
+  "quality_scale": "silver"
 }
